Fix layout on main page so their is spacing between the tiles

--- a/css/main.css
+++ b/css/main.css
@@ -468,11 +468,3 @@ div .av_one_half {
 div .av_one_half {width:47%;}
 
 body .alignright { float:right;margin:4px 0px 0px 10px;display: block; position: relative; }
-
-div .flex_column {
-  z-index: 1;
-  float: left;
-  position: relative;
-  min-height: 1px;
-  width: 100%;
-}
